[project]
name = "robustness"
version = "0.1.0"
description = ""
authors = [
    {name = "matthewexe",email = "matteobaldi233@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "aeon (==1.3.0)",
    "dd (>=0.6.0,<0.7.0)",
    "deprecated (==1.3.1)",
    "joblib (==1.5.2)",
    "llvmlite (==0.44.0)",
    "numba (==0.61.2)",
    "numpy (==2.2.0)",
    "packaging (==25.0)",
    "pandas (==2.3.3)",
    "pyaml (==25.7.0)",
    "pytz (==2025.2)",
    "scikit-learn (==1.7.2)",
    "scikit-optimize (==0.10.2)",
    "scipy (==1.15.3)",
    "six (==1.17.0)",
    "threadpoolctl (==3.6.0)",
    "typing-extensions (==4.15.0)",
    "tzdata (==2025.2)",
    "wrapt (==2.0.1)",
    "pydantic (>=2.12.5,<3.0.0)",
    "lark (>=1.3.1,<2.0.0)",
    "networkx (>=3.6.1,<4.0.0)",
    "pygraphviz (>=1.14,<2.0)",
]

# [tool.poetry.scripts]
# robustness = "robustness.__main__:main"

[project.optional-dependencies]
testing = ["ipykernel (>=7.1.0,<8.0.0)"]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
robustness = "robustness.__main__:main"

[tool.poetry]
packages = [{include = "robustness", from = "src"}]

